# shorelark

./: Cargo.toml  README.md  flake.nix
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: chromosome.rs  crossover_method.rs  individual.rs  lib.rs  mutation_method.rs  selection_method.rs  statistics.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: lib.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: lib.rs
libs/simulation/src/: animal.rs  brain.rs  eye.rs  food.rs  lib.rs  world.rs
www/: index.html  index.js  package-lock.json  package.json
